--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://images-platform.99static.com//ssHgGLtTSQfnvpEleyJD38HgVpY=/0x0:2000x2000/fit-in/500x500/99designs-contests-attachments/105/105121/attachment_105121241" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Readers' Pick</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
